--- a/_posts/2022-10-27-test.md
+++ b/_posts/2022-10-27-test.md
@@ -2,7 +2,7 @@
 layout: post
 title: "GitHub Admin Training (GitHub Enterprise Server)"
 parameterized_name: test
-lead: "Prepare your GitHub Enterprise Server Administrators to maintain a healthy, scalable GitHub environment that supports the needs of your development team."
+description: "Prepare your GitHub Enterprise Server Administrators to maintain a healthy, scalable GitHub environment that supports the needs of your development team."
 ---
 
 ## Overview
